--- a/3/style.css
+++ b/3/style.css
@@ -1,50 +1,139 @@
-.joker_img {
-    background-image: url("joker.jpg");
-    width: 256px;
-    height: 300px;
-    border: 2px solid #000000;
-    margin: 10px;
-    background-repeat: no-repeat;
-
-}
-
-.text_link {
-    background-color: black;
-    color: white;
-    text-decoration: none;
-}
-
-.description_text {
-    font-size: 20px;
+.wrap {
+    width: 540px;
+    height: 380px;
     padding: 10px;
-    color: aqua;
-    text-align: -webkit-center;
-}
-.name1 {
-    position: absolute; /* Абсолютное позиционирование */
-    bottom: 15px; /* Положение от нижнего края */
-    right: 15px; /* Положение от правого края */
-
+    border: 1px solid #cc521f;
+    background: #eee;
+    margin:20px auto 10px;
 }
 
-.name {
-    /*id="test" --> #test {}  можно задавать стили для всего отдельно по идентификатору */
-    /*opacity: 0.5;  прозрачность элемента*/
-    /*display: - это свойство нужно для того что бы указать виден элемент или нет, по умолчанию bloсk(виден) если none - НЕвиден                                                                                                                                                                     background-image: url(""); картинка для фона блока или класса(задается относительно CSS файла)
-    background-color: #000000; цвет фона
-    border: 2px solid #000000 цвет рамки
-    font-size: 16px; - размер текста
-    margin: 10px; - расстояние между блоками, отступы(отталкивание между ними)
-    padding: 10px; - внутренне отталкивание текста от рамак (отступы)
-    text-align: center; - выравнивание текста в заданном блоке
-    font-weight: 400; - жирность шрифта
-    transition: all 0.4s; - время длительности анимации (где all можно конкретный класс указать)
-    display: inline-block; блоки будут занимать место равное своему размеру
-
-#test:hover {
-  тут пишем все свойства которые начнут работать при наведении курсора
-   }*/
-    background-repeat: no-repeat; /*выключить повторение картинки*/
+.header {
+    font-size: 25px;
+    width: 540px;
+    height: 30px;
     position: relative;
-    text-align: end;
+
+}
+.inner-content1 {
+    position: absolute;
+    right: 115px;
+    bottom: 2px;
+    width: 30px;
+    height: 25px;
+    border-radius: 100%;
+    background-color: #cc521f;
+    text-align: center;
+}
+.inner-content2 {
+    position: absolute;
+    right: 60px;
+    bottom: 0;
+}
+.inner-content3 {
+    position: absolute;
+    right: 20px;
+    bottom: 2px;
+    width: 30px;
+    height: 25px;
+    border-radius: 100%;
+    background-color: #cc521f;
+    text-align: center;
+}
+
+.joker {
+    background-image: url("img/joker.jpg");
+    width: 256px;
+    height: 256px;
+    border: 1px solid #ccc;
+    margin: 20px;
+    position: relative;
+    float: left;
+}
+
+.marvel {
+    background-image: url("img/marvel.jpg");
+    width: 200px;
+    height: 286px;
+    border: 1px solid #ccc;
+    margin: 20px;
+    position: relative;
+    float: left;
+}
+
+.click {
+    background-color: black;
+    width: 100px;
+    height: 20px;
+    border-radius: 10px;
+    color: #0b890f;
+    text-align: center;
+    border: 1px solid #000000;
+    position: absolute;
+    left: 50px;
+    bottom: 20px;
+    z-index: 2;
+    opacity: 1;
+}
+
+.description {
+    text-align: left;
+    color: #0207ff;
+    margin: 15px;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 1s;
+    font-size: 20px;
+}
+.description1 {
+    text-align: left;
+    color: white;
+    margin: 15px;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 1s;
+    font-size: 20px;
+}
+
+.background {
+    width: 256px;
+    height: 256px;
+    background-color: #000000;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 1s;
+
+}
+
+.background1 {
+    width: 200px;
+    height: 286px;
+    background-color: #000000;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 1s;
+
+}
+
+.click:hover ~ .background {
+    visibility: visible;
+    opacity: 0.4;
+}
+.click:hover ~ .background1 {
+    visibility: visible;
+    opacity: 0.4;
+}
+
+.click:hover ~ .description {
+    visibility: visible;
+    opacity: 1;
+}
+.click:hover ~ .description1 {
+    visibility: visible;
+    opacity: 1;
 }
